--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,11 +4,15 @@ on:
   workflow_dispatch: # Enables on-demand/manual triggering
   push:
     branches:
-      - main
+      - master
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [16]
+
     steps:
       - name: Checkout source
         uses: actions/checkout@v2
